# agentproxy

./: AGENTS.md  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: commit_response.rs  db.rs  lib.rs  main.rs  mcp.rs  policy.rs  query_engine.rs  query_executor.rs  service.rs
examples/: policy.yaml
examples/puppyrestaurant/: .gitignore  Cargo.toml  README.md  policy.yaml  puppyrestaurant.db  schema.sql  seed.sql
examples/puppyrestaurant/src/: agent_ui.rs  main.rs  setup.rs
