[package]
name = "agentproxy-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
agentproxy = { path = "../core" }
axum = { version = "0.7", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
hyper = { version = "0.14", features = ["server", "tcp"] }
