[package]
name = "puppyrestaurant"
version = "0.1.0"
edition = "2024"

[dependencies]
agentproxy = { path = "../../core" }
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.11", features = ["json"] }
wgui = { git = "https://github.com/J45k4/wgui.git", rev = "daf29c83174478d77815ddf329c8753c780fa525", default-features = false, features = ["axum"] }

